# emergency-logistics-ap

./: .gitignore  README.md
problem1/: domain.pddl  problem.pddl  results.md  runnerSolverAPI.py
problem2/: domain.pddl  problem.pddl  problem_extra_3boxes.pddl  results.md
problem2/numeric_fluents/: domain.pddl  problem.pddl
problem3/: domain.hddl  problem.hddl  results.md
problem4/: problem.pddl  problem_extra_3boxes.pddl  results.md
problem4/no_negative_preconditions/: domain.pddl  problem.pddl
problem5/: Dockerfile  setup.md
problem5/plansys_problem5/: CMakeLists.txt  launch_terminal1.sh  launch_terminal2.sh  package.xml  results.md
problem5/plansys_problem5/launch/: plansys2_problem5_launch.py  problem
problem5/plansys_problem5/pddl/: domain.pddl
problem5/plansys_problem5/src/: attach_carrier_to_robot_action_node.cpp  deliver_action_node.cpp  delivery_or_refactored_possible_action1_action_node.cpp  delivery_or_refactored_possible_action2_action_node.cpp  detach_carrier_from_robot_action_node.cpp  fill_box_action_node.cpp  load_box_on_carrier_action_node.cpp  move_robot_action_node.cpp  move_robot_with_carrier_action_node.cpp  unload_box_from_carrier_action_node.cpp
